force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__AttachmentId__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__AttachmentId__c</fullName>
    <description>Image of this reward.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Upload an image for this reward.</inlineHelpText>
    <label>Image</label>
    <length>18</length>
    <type>Text</type>
</CustomField>