force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__CondenserId__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__CondenserId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Condenser Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>