force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ExpirationDate__c</fullName>
    <description>Expiration date for this reward.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Specify the expiration date of the reward.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>