force-app/main/default/objects/FieloEE__Reward__c/fields/FieloEE__ItemsAvailableReadOnly__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ItemsAvailableReadOnly__c</fullName>
    <formula>IF( ISPICKVAL(FieloEE__VoucherCreationMode__c  , &apos;Unlimited&apos;) , $Label.fieloee__inforewardgenerateitemswhenstockunlimited ,  TEXT( FieloEE__Stock__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Items Available (Read Only)</label>
    <type>Text</type>
</CustomField>