force-app/main/default/objects/FieloEE__Reward__c/validationRules/FieloEE__ChangeStockMode.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__ChangeStockMode</fullName>
    <active>true</active>
    <errorConditionFormula>((ISPICKVAL(PRIORVALUE(FieloEE__VoucherCreationMode__c), &apos;Controlled By Quantity&apos;) &amp;&amp; (ISPICKVAL(FieloEE__VoucherCreationMode__c, &apos;Unlimited&apos;) || ISPICKVAL(FieloEE__VoucherCreationMode__c, &apos;Controlled By Item&apos;))) ||
(ISPICKVAL(PRIORVALUE(FieloEE__VoucherCreationMode__c), &apos;Controlled By Item&apos;) &amp;&amp; (ISPICKVAL(FieloEE__VoucherCreationMode__c, &apos;Unlimited&apos;) ||
ISPICKVAL(FieloEE__VoucherCreationMode__c, &apos;Controlled By Quantity&apos;)))) &amp;&amp;
FieloEE__Stock__c &gt; 0</errorConditionFormula>
    <errorDisplayField>FieloEE__VoucherCreationMode__c</errorDisplayField>
    <errorMessage>This operation is allowed when stock is equal to zero</errorMessage>
</ValidationRule>