force-app/main/default/objects/FieloEE__Reward__c/validationRules/FieloEE__MultiVoucher.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__MultiVoucher</fullName>
    <active>true</active>
    <errorConditionFormula>FieloEE__UniqueVoucher__c &amp;&amp;  ISPICKVAL(FieloEE__VoucherCreationMode__c, &apos;Controlled By Item&apos;)</errorConditionFormula>
    <errorMessage>Rewards controlled By Item with preloaded vouchers can&apos;t be unique voucher</errorMessage>
</ValidationRule>