force-app/main/default/objects/FieloEE__Reward__c/validationRules/FieloEE__Stock_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Stock_Positive</fullName>
    <active>true</active>
    <description>Stock Must be positive</description>
    <errorConditionFormula>AND(IF(ISCHANGED(FieloEE__Stock__c) ,
IF( OR(ISBLANK(FieloEE__Stock__c) , FieloEE__Stock__c &lt; 0) ,
true,
false),
false), NOT( ISPICKVAL(FieloEE__VoucherCreationMode__c, &apos;Unlimited&apos;) ))</errorConditionFormula>
    <errorMessage>The stock should be positive</errorMessage>
</ValidationRule>